// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplorerChartLabelBadge Render the chart label in one line. 1`] = `
<React.Fragment>
  <span
    className="ml-explorer-chart-label"
  >
    <span
      className="ml-explorer-chart-label-detector"
    >
      high_sum(nginx.access.body_sent.bytes) over nginx.access.remote_ip (population-03)
      <React.Fragment>
         – 
      </React.Fragment>
    </span>
    <React.Fragment>
      <ExplorerChartLabelBadge
        entity={
          Object {
            "$$hashKey": "object:813",
            "fieldName": "nginx.access.remote_ip",
            "fieldValue": "72.57.0.53",
          }
        }
        key="nginx.access.remote_ip 72.57.0.53"
      />
       
      <span
        className="ml-explorer-chart-info-icon"
      >
        <EuiIconTip
          aria-label="Info"
          className="ml-explorer-chart-eui-icon-tip"
          content={
            <ExplorerChartInfoTooltip
              aggregationInterval="1h"
              chartFunction="sum nginx.access.body_sent.bytes"
              entityFields={
                Array [
                  Object {
                    "fieldName": "nginx.access.remote_ip",
                    "fieldValue": "72.57.0.53",
                  },
                ]
              }
              jobId="population-03"
            />
          }
          position="top"
          size="s"
          type="questionInCircle"
        />
      </span>
    </React.Fragment>
  </span>
</React.Fragment>
`;

exports[`ExplorerChartLabelBadge Render the chart label in two lines. 1`] = `
<React.Fragment>
  <span
    className="ml-explorer-chart-label"
  >
    <span
      className="ml-explorer-chart-label-detector"
    >
      high_sum(nginx.access.body_sent.bytes) over nginx.access.remote_ip (population-03)
      <React.Fragment>
         
      </React.Fragment>
    </span>
    <span
      className="ml-explorer-chart-info-icon"
    >
      <EuiIconTip
        aria-label="Info"
        className="ml-explorer-chart-eui-icon-tip"
        content={
          <ExplorerChartInfoTooltip
            aggregationInterval="1h"
            chartFunction="sum nginx.access.body_sent.bytes"
            entityFields={
              Array [
                Object {
                  "fieldName": "nginx.access.remote_ip",
                  "fieldValue": "72.57.0.53",
                },
              ]
            }
            jobId="population-03"
          />
        }
        position="top"
        size="s"
        type="questionInCircle"
      />
    </span>
  </span>
  <span
    className="ml-explorer-chart-label-badges"
  >
    <ExplorerChartLabelBadge
      entity={
        Object {
          "$$hashKey": "object:813",
          "fieldName": "nginx.access.remote_ip",
          "fieldValue": "72.57.0.53",
        }
      }
      key="nginx.access.remote_ip 72.57.0.53"
    />
  </span>
</React.Fragment>
`;
